--- a/form-api/package.json
+++ b/form-api/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "npm-check-updates": "^16.0.1",
     "pg": "^8.7.3",
     "typescript": "^4.7.4"
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.6.5",
     "ts-node": "^10.9.1"
   }
